[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18"
url = "2.4"
image = "0.24"
clap = { version = "4.4.8", features = ["derive"] }
regex = "1.10.2"
tempfile = "3.8.1"
rand = "0.8.5"
tokio-retry = "0.3"
